--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,9 @@
 [submodule "ropes"]
 	path = ropes
 	url = https://github.com/minetest-mods/ropes.git
+[submodule "darkage"]
+	path = darkage
+	url = https://github.com/adrido/darkage.git
+[submodule "medieval"]
+	path = medieval
+	url = https://bitbucket.org/Infinatum/medieval.git
